Updating EDA File

--- a/src/Markt_pilot_EDA.ipynb
+++ b/src/Markt_pilot_EDA.ipynb
@@ -388,7 +388,7 @@
     "    \n",
     "    print(\"\\nDebug complete\")\n",
     "\n",
-    "# Call the debug function\n",
+    "# Call the debug function if required when debugging\n",
     "# debug_sonar_parsing()"
    ]
   },
@@ -495,7 +495,7 @@
     "        if col in df.columns:\n",
     "            value_counts = df[col].value_counts()\n",
     "            print(f\"\\n2.{categorical_cols.index(col) + 1} {col.capitalize()} Distribution:\")\n",
-    "            print(value_counts.head(10))  # Show only top 10\n",
+    " #           print(value_counts.head(10))  # Show only top 10 to check the data if required\n",
     "            print(f\"Total unique values: {df[col].nunique()}\")\n",
     "    \n",
     "    print(\"\\n3. TEMPORAL ANALYSIS\")\n",
@@ -721,44 +721,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "8687145e-9683-43f0-8f4d-481a71244eba",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def print_recommendations_and_next_steps():\n",
-    "    \"\"\"\n",
-    "    Print recommendations and next steps\n",
-    "    \"\"\"\n",
-    "    print(\"\\n14. RECOMMENDATIONS & INSIGHTS\")\n",
-    "    print(\"-\" * 50)\n",
-    "    print(\"\"\"\n",
-    "    Based on the analysis, here are some key insights and recommendations:\n",
-    "    \n",
-    "    1. DATA QUALITY:\n",
-    "       - Address missing values in the dataset, particularly in the sonar results\n",
-    "       - Standardize the delivery time reporting (many values are -99)\n",
-    "       - Investigate entries with low data quality scores\n",
-    "    \n",
-    "    # ... (remaining recommendations)\n",
-    "    \"\"\")\n",
-    "    \n",
-    "    print(\"\\n15. NEXT STEPS\")\n",
-    "    print(\"-\" * 50)\n",
-    "    print(\"\"\"\n",
-    "    For further analysis, consider these next steps:\n",
-    "    \n",
-    "    1. TARGETED DEEP DIVES:\n",
-    "       - Focus on high-volume parts or strategic suppliers\n",
-    "       - Analyze specific geographical markets in detail\n",
-    "       - Investigate price outliers and unusual patterns\n",
-    "    \n",
-    "    # ... (remaining next steps)\n",
-    "    \"\"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
    "id": "7104ad4b-8af7-40f1-86f1-2373d1760319",
    "metadata": {},
@@ -814,9 +776,6 @@
     "        sns.boxplot(x='supplier_country', y='price', data=country_data)\n",
     "        plt.title('Price by Top Supplier Countries')\n",
     "        plt.xticks(rotation=45)\n",
-    "    \n",
-    "    # Continue with other plots...\n",
-    "    # (Remaining subplot code would be here)\n",
     "    \n",
     "    plt.tight_layout()\n",
     "    plt.savefig('sonar_analysis.png')\n",
@@ -1519,7 +1478,7 @@
    "source": [
     "# Example\n",
     "# df = pd.read_parquet(\"client_part_collection_sample.parquet\")\n",
-    "sonar_df = df.copy()  # or however you define sonar_df\n",
+    "sonar_df = df.copy()  # \n",
     "\n"
    ]
   },
@@ -1676,14 +1635,6 @@
    "source": [
     "run_analysis()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "28147bb9-a1f2-47ab-b1cf-10a6baefba4e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
